# home_automation

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  .travis.yml  AGENTS.md  CMakeLists.txt  README.md  Tupfile  Tuprules.tup  append_json.py  calibrator.py  check_environment.sh  generate.py  print_json.sh  save_environment.sh
.externalToolBuilders/: Generate Files.launch
.travis/: deploy.sh  run-test.sh  setup-paths.sh
arduino/: .gitignore  Tupfile  Tuprules.tup  archive.tup  bootstrap.sh  check_environment.sh  compile.tup  environment.sh  gen_cpp.tup  generate.py  link.tup  print_json.sh  save_environment.sh  test.cpp
arduino/core/: .gitignore  Tupfile
arduino/libraries/: Tupfile.template  generate_rules.sh
arduino/src/: Tuprules.tup
deploy/: create_deployment.py
deploy/data/: common.sh  get_django_path.py  home_automation.conf  home_automation.service  home_automation_manage  install.sh  lighttpd.conf  lighttpd.conf.device  upgrade.sh
device/: .gitignore  flash.tup  link.tup
device/esp/: compile.tup
device/libraries/: Tuprules.tup
device/pi/: client.py  content.py  error.py  fcgi.py  gpio.py  pin.py
example_config/: config.json  config_db.json  config_device_specific.json  device_config.json  global_config.json  lighttpd.conf  pi_config.json
example_config/counter/: device_config.json
example_config/dallas/: device_config.json
examples/: config_common.json  lighttpd.conf
python/: flipflop2.py
server/: Tuprules.tup  fcgi.py  gen_python.tup  server.py
server/lib/: actions.py  (+5 more)
src/: .cproject  .project  .sproject  Action.hpp  AnalogSensor.cpp  AnalogSensor.hpp  ArduinoJson.hpp  CommandAction.cpp  CommandAction.hpp  ConditionalAction.cpp  ConditionalAction.hpp  ConnectionPool.hpp  CounterInterface.cpp  CounterInterface.hpp  Cover.cpp  Cover.hpp  DallasTemperatureSensor.cpp  DallasTemperatureSensor.hpp  DebugStream.cpp  DebugStream.hpp  DhtSensor.cpp  DhtSensor.hpp  EchoDistanceReaderInterface.cpp  EchoDistanceReaderInterface.hpp  EchoDistanceSensor.cpp  EchoDistanceSensor.hpp  EncoderInterface.cpp  EncoderInterface.hpp  EspAnalogInput.cpp  EspAnalogInput.hpp  EspApiImpl.cpp  EspApiImpl.hpp  EspEncoder.cpp  EspEncoder.hpp  EspRtc.cpp  EspRtc.hpp  EspWifi.cpp  EspWifi.hpp  GpioInput.cpp  GpioInput.hpp  (+68 more)
test/: AnalogSensorTest.cpp  BackoffTest.cpp  CoverMovementTest.cpp  CoverTest.cpp  CoverUpdateTest.cpp  DummyBackoff.hpp  EspTestBase.cpp  EspTestBase.hpp  FakeAnalogInput.cpp  FakeAnalogInput.hpp  FakeEspApi.cpp  FakeEspApi.hpp  FakeMqttConnection.cpp  FakeMqttConnection.hpp  FakeRtc.cpp  FakeRtc.hpp  FakeWifi.cpp  FakeWifi.hpp  InterfaceTestBase.cpp  InterfaceTestBase.hpp  LogExpectation.cpp  LogExpectation.hpp  LogExpectationTest.cpp  MqttClientTest.cpp  OperationParser2.hpp  OperationParser2Test.cpp  OperationParserTest.cpp  TestHelpers.hpp  TestStream.cpp  TestStream.hpp  collectionTest.cpp  stringTest.cpp  testMain.cpp
(+175 files in other folders)
